--- a/day1/index.html
+++ b/day1/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <h1>Day one</h1>
+    <button onclick="alert('Hello class')">Click Me</button>
+    <!-- Internal linking -->
+    <!-- <script>
+      console.log("Welcome to Internal js");
+    </script> -->
+    <!-- external -->
     <script src="./script.js"></script>
+    <script src="./variable.js"></script>
+    <script src="./datatypes.js"></script>
   </body>
 </html>
