feat:Day1 Completed

--- a/day1/index.html
+++ b/day1/index.html
@@ -13,6 +13,7 @@
     <!-- <script>
       console.log("Welcome to Internal js");
     </script> -->
+    <!-- to call from outside  -->
     <!-- external -->
     <script src="./script.js"></script>
     <script src="./variable.js"></script>
