feat:day9 Act3 Completed

--- a/day9/Act3/index.html
+++ b/day9/Act3/index.html
@@ -10,5 +10,6 @@
     <h1>Day Nine</h1>
     <h2>Excercise Three</h2>
     <script src="./script.js"></script>
+    <script src="./countries.js"></script>
   </body>
 </html>
