--- a/day21/Act1/index.html
+++ b/day21/Act1/index.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p id="one"></p>
+    <p id="two"></p>
+    <p id="three"></p>
+    <p id="four"></p>
+    <script src="./script.js"></script>
+  </body>
 </html>
