--- a/day21/Act3/index.html
+++ b/day21/Act3/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h1>Asabeneh Yetayeh challenges in 2020</h1>
+      <h1>Asabeneh Yetayeh challenges in <span>2020</span></h1>
       <h2>30DaysOfJavaScript Challenge</h2>
       <ul>
         <li>30DaysOfPython Challenge Done</li>
@@ -17,5 +17,6 @@
         <li>30DaysOfMachineLearning Challenge Coming</li>
       </ul>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
