--- a/day1/index.html
+++ b/day1/index.html
@@ -14,7 +14,7 @@
       console.log("Welcome to Internal js");
     </script> -->
     <!-- to call from outside  -->
-    <!-- external -->
+    <!-- external 1 -->
     <script src="./script.js"></script>
     <script src="./variable.js"></script>
     <script src="./datatypes.js"></script>
